#100 refactored styling of links to prevent style bleeding

--- a/scss/components/breadcrumb.scss
+++ b/scss/components/breadcrumb.scss
@@ -24,6 +24,7 @@ $block: #{$fd-namespace}-breadcrumb;
     list-style: none;
     padding-right: fd-space(4);
 
+
     @include fd-rtl() {
         padding: 0 0 0 fd-space(4);
         &__item {
@@ -65,28 +66,26 @@ $block: #{$fd-namespace}-breadcrumb;
             margin-right: initial;
             margin-left: $fd-breadcrumb-link-margin;
         }
-    }
 
-    a {
         text-decoration: none;
         display: inline-block;
         transition: all $fd-animation--speed ease-in;
         @include fd-var-color("color", $fd-color--action, --fd-color-action);
         @include fd-hover() {
-          @include fd-var-color("color", fd-color-state("hover", "action"), --fd-color-action-hover);
+            @include fd-var-color("color", fd-color-state("hover", "action"), --fd-color-action-hover);
         }
         @include fd-active-pressed-selected() {
-          @include fd-var-color("color", fd-color-state("selected", "action"), --fd-color-action-selected);
-          outline: none;
+            @include fd-var-color("color", fd-color-state("selected", "action"), --fd-color-action-selected);
+            outline: none;
         }
         &:focus {
-          outline-style: dotted;
-          outline-width: 1px;
-          @include fd-var-color("outline-color", fd-color-state("hover", "action"), --fd-color-action-focus);
+            outline-style: dotted;
+            outline-width: 1px;
+            @include fd-var-color("outline-color", fd-color-state("hover", "action"), --fd-color-action-focus);
         }
         @include fd-disabled() {
-          @include fd-var-color("outline-color", fd-color-state("disabled", "action"), --fd-color-action-disabled);
-          cursor: not-allowed;
+            @include fd-var-color("outline-color", fd-color-state("disabled", "action"), --fd-color-action-disabled);
+            cursor: not-allowed;
         }
     }
 }
